# name: test_attach_files[uvloop]
  <class 'dict'> {
    '_id': 'foo',
    'files': <class 'list'> [
      <class 'dict'> {
        'download_url': '/api/indexes/foo/files/reference.1.bt2',
        'id': 1,
        'index': 'foo',
        'name': 'reference.1.bt2',
        'size': 1234567,
        'type': 'bowtie2',
      },
      <class 'dict'> {
        'download_url': '/api/indexes/foo/files/reference.2.bt2',
        'id': 2,
        'index': 'foo',
        'name': 'reference.2.bt2',
        'size': 1234567,
        'type': 'bowtie2',
      },
    ],
    'reference': <class 'dict'> {
      'id': 'bar',
    },
  }
---
# name: test_create[uvloop-None]
  <class 'dict'> {
    '_id': '9pfsom1b',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'has_files': True,
    'has_json': False,
    'job': <class 'dict'> {
      'id': 'bar',
    },
    'manifest': 'manifest',
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
    'version': 0,
  }
---
# name: test_create[uvloop-None].1
  <class 'dict'> {
    '_id': 'abc',
    'index': <class 'dict'> {
      'id': '9pfsom1b',
      'version': 0,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
  }
---
# name: test_create[uvloop-abc]
  <class 'dict'> {
    '_id': 'abc',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'has_files': True,
    'has_json': False,
    'job': <class 'dict'> {
      'id': 'bar',
    },
    'manifest': 'manifest',
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'foo',
    },
    'user': <class 'dict'> {
      'id': 'test',
    },
    'version': 0,
  }
---
# name: test_create[uvloop-abc].1
  <class 'dict'> {
    '_id': 'abc',
    'index': <class 'dict'> {
      'id': 'abc',
      'version': 0,
    },
    'reference': <class 'dict'> {
      'id': 'foo',
    },
  }
---
# name: test_finalize[uvloop]
  <class 'dict'> {
    '_id': 'foo',
    'files': <class 'list'> [
      <class 'dict'> {
        'download_url': '/api/indexes/foo/files/reference.1.bt2',
        'id': 1,
        'index': 'foo',
        'name': 'reference.1.bt2',
        'size': 1234567,
        'type': 'bowtie2',
      },
      <class 'dict'> {
        'download_url': '/api/indexes/foo/files/reference.2.bt2',
        'id': 2,
        'index': 'foo',
        'name': 'reference.2.bt2',
        'size': 1234567,
        'type': 'bowtie2',
      },
    ],
    'ready': True,
    'reference': <class 'dict'> {
      'id': 'bar',
    },
  }
---
# name: test_finalize[uvloop].1
  <class 'dict'> {
    '_id': 'foo',
    'ready': True,
    'reference': <class 'dict'> {
      'id': 'bar',
    },
  }
---
